[gd_scene load_steps=7 format=4 uid="uid://dxlmavhc5c3s8"]

[ext_resource type="TileSet" uid="uid://ckkmoyss7e8rf" path="res://Art/pixel_art_top_down.tres" id="1_d85r5"]
[ext_resource type="Script" path="res://Scripts/interactable_door_locked.gd" id="2_ax8bn"]
[ext_resource type="PackedScene" uid="uid://b6lm3xtuv5nrg" path="res://Scenes/interaction_area.tscn" id="3_mh8xu"]
[ext_resource type="Script" path="res://Scripts/interactable_door.gd" id="3_qj86j"]
[ext_resource type="Script" path="res://Scripts/interactable_control_door.gd" id="4_nwnii"]

[sub_resource type="LabelSettings" id="LabelSettings_t187w"]

[node name="Door" type="Node2D"]

[node name="ClosedDoor" type="TileMapLayer" parent="."]
y_sort_enabled = true
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD+//7/AgABAAYAAAD+////AgABAAcAAAD+/wAAAgABAAgAAAD+/wEAAgABAAkAAAD///7/AgACAAYAAAD/////AgACAAcAAAD//wAAAgACAAgAAAD//wEAAgACAAkAAAAAAP7/AgADAAYAAAAAAP//AgADAAcAAAAAAAAAAgADAAgAAAAAAAEAAgADAAkAAAABAP7/AgAEAAYAAAABAP//AgAEAAcAAAABAAAAAgAEAAgAAAABAAEAAgAEAAkAAAA=")
tile_set = ExtResource("1_d85r5")
script = ExtResource("2_ax8bn")

[node name="OpenDoor" type="TileMapLayer" parent="."]
visible = false
y_sort_enabled = true
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD+//7/AgABAAoAAAD+////AgABAAsAAAD+/wAAAgABAAwAAAD+/wEAAgABAA0AAAD///7/AgACAAoAAAD/////AgACAAsAAAD//wAAAgACAAwAAAD//wEAAgACAA0AAAAAAP7/AgADAAoAAAAAAP//AgADAAsAAAAAAAAAAgADAAwAAAAAAAEAAgADAA0AAAABAP7/AgAEAAoAAAABAP//AgAEAAsAAAABAAAAAgAEAAwAAAABAAEAAgAEAA0AAAA=")
tile_set = ExtResource("1_d85r5")
script = ExtResource("3_qj86j")

[node name="InteractionArea" parent="." instance=ExtResource("3_mh8xu")]
position = Vector2(2, -46)
scale = Vector2(1.11776, 1.27455)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_nwnii")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.9
anchor_top = -7.05
anchor_right = 4.57
anchor_bottom = -6.05
offset_right = 1.2
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.812
anchor_top = -6.947
anchor_right = 4.555
anchor_bottom = -4.447
offset_left = 24.48
offset_top = 10.88
offset_right = -29.2
offset_bottom = -19.12
theme_override_font_sizes/font_size = 24
text = "It's locked!"
label_settings = SubResource("LabelSettings_t187w")

[connection signal="body_exited" from="InteractionArea" to="OpenDoor" method="_on_interaction_area_body_exited"]
[connection signal="body_exited" from="InteractionArea" to="Control" method="_on_interaction_area_body_exited"]
[connection signal="interacted" from="InteractionArea" to="OpenDoor" method="_on_interaction_area_interacted"]
[connection signal="interacted" from="InteractionArea" to="Control" method="_on_interaction_area_interacted"]
